packages updated, api versioning created, minor issues resolved
